--- a/index.ipynb
+++ b/index.ipynb
@@ -65,13 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "temperature = 85\n",
-    "is_it_hot = None\n",
-    "# conditionals go here"
+    "def is_it_hot(temperature):\n",
+    "    if temperature >= 80:\n",
+    "        return 'It is so hot out!'\n",
+    "    else:\n",
+    "        return 'This is nothing! Bring on the heat.' # conditionals go here"
    ]
   },
   {
@@ -84,12 +87,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Wednesday'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "today_is = 4\n",
-    "day_of_the_week = None\n",
+    "def day_of_the_week(today_is):\n",
+    "    if today_is == 1:\n",
+    "        return 'Sunday'\n",
+    "    elif today_is == 2:\n",
+    "        return 'Monday'\n",
+    "    elif today_is == 3:\n",
+    "        return 'Tuesday'\n",
+    "    elif today_is == 4:\n",
+    "        return 'Wednesday'\n",
+    "    elif today_is == 5:\n",
+    "        return 'Thursday'\n",
+    "    elif today_is == 6:\n",
+    "        return 'Friday'\n",
+    "    elif today_is == 7:\n",
+    "        return 'Saturday'\n",
+    "    else:\n",
+    "        return 'Null'\n",
+    "day_of_the_week(today_is)\n",
     "# conditionals go here"
    ]
   },
@@ -102,14 +133,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"Python\"\n",
+    "string1 = \"Military\"\n",
     "sub_string = \"on\"\n",
-    "ends_with = None\n",
-    "# conditionals go here"
+    "def ends_with(string): # conditionals go here\n",
+    "    if string.endswith(sub_string):\n",
+    "        return 'True'\n",
+    "    else:\n",
+    "        return 'False'\n",
+    "print(ends_with(string))\n",
+    "print(ends_with(string1))"
    ]
   },
   {
@@ -143,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
